<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/fragment_network_error_margin_top"
        android:layout_marginEnd="@dimen/fragment_network_error_margin_start"
        android:layout_marginStart="@dimen/fragment_network_error_margin_start"
        android:layout_marginTop="@dimen/fragment_network_error_margin_top"
        android:background="@color/darkGrey3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgv_alert"
            android:layout_width="@dimen/exit_fragment_icon_size"
            android:layout_height="@dimen/exit_fragment_icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/ico_alert_marginstart"
            android:src="@drawable/ico_alert" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/fragment_network_error_margin_top"
            android:layout_marginTop="@dimen/fragment_network_error_margin_top"
            android:paddingEnd="@dimen/fragment_network_error_text_margin_start"
            android:paddingStart="@dimen/fragment_network_error_text_margin_start">

            <TextView
                android:id="@+id/fragment_network_error_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/NETWORK_ERROR_TITLE"
                android:textAlignment="center"
                android:textColor="@color/faded_red"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/fragment_network_error_subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/fragment_network_error_button_ok"
                android:layout_below="@id/fragment_network_error_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/fragment_network_error_text_margin_top"
                android:text="@string/NETWORK_ERROR_TEXT"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:letterSpacing="0.08"
                android:textSize="15dp" />

            <Button
                android:id="@id/fragment_network_error_button_ok"
                android:layout_width="@dimen/button_ok_width"
                android:layout_height="@dimen/button_ok_height"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/offYellow"
                android:text="@string/GOT_IT"
                android:textAlignment="center"
                android:textColor="@color/darkGrey3"
                android:textSize="@dimen/exit_fragment_btn_text_size" />
        </RelativeLayout>

    </LinearLayout>
</FrameLayout>