<?xml version="1.0" encoding="utf-8"?>
<sdk.dive.tv.ui.views.CommercialView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey_three"
    android:elevation="@dimen/shadow_elevation"
    android:paddingEnd="0dp"
    android:paddingStart="@dimen/commercial_margin"
    android:translationX="@dimen/shadow_elevation">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/socket_events_image_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/commercial_image_guideline" />

        <RelativeLayout
            android:id="@+id/commercial_image_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/socket_events_image_guideline"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/commercial_image_container_margin_bot"
                android:layout_marginEnd="@dimen/commercial_image_container_margin_end"
                android:layout_toStartOf="@+id/commercial_image_mobile">

                <TextView
                    android:id="@+id/commercial_image_text"
                    android:layout_width="@dimen/commercial_image_container_txt_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/tvgrid_empty_dive_phone_btn_separation"
                    android:letterSpacing="-0.03"
                    android:lineSpacingExtra="1dp"
                    android:text="@string/TVGRID_COMMERCIAL_TXT"
                    android:textColor="@color/dark_grey_three"
                    android:gravity="end"
                    android:textSize="@dimen/commercial_image_container_txt_size" />

                <ImageView
                    android:id="@+id/tvgrid_upcoming_empty_gplay"
                    android:layout_width="@dimen/tvgrid_empty_dive_phone_btn_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/commercial_image_text"
                    android:layout_marginEnd="@dimen/tvgrid_empty_dive_phone_btn_separation"
                    android:layout_toStartOf="@+id/commercial_appstore_image"
                    android:src="@drawable/google_play_btn" />

                <ImageView
                    android:id="@id/commercial_appstore_image"
                    android:layout_width="@dimen/tvgrid_empty_dive_phone_btn_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/commercial_image_text"
                    android:src="@drawable/appstore_btn" />
            </RelativeLayout>

            <ImageView
                android:id="@id/commercial_image_mobile"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/commercial_image_height"
                android:layout_alignParentBottom="true"
                android:scaleType="fitCenter"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/commercial_image_margin_end"
                android:src="@drawable/dark_iphone" />

        </RelativeLayout>


    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/carousel_commercial_button_close"
        android:layout_width="@dimen/carousel_button_height"
        android:layout_height="@dimen/carousel_button_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/commercial_margin"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/carousel_menu_elements_padding"
        android:background="@drawable/carousel_button_focus_selector"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/carousel_commercial_image_close"
            android:layout_width="@dimen/carousel_cross_size"
            android:layout_height="@dimen/carousel_cross_size"
            android:layout_gravity="center"
            android:duplicateParentState="true"
            android:src="@drawable/button_close" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="@dimen/commercial_text_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/commercial_text_margin"
        android:layout_marginTop="@dimen/commercial_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/commercial_text1"
            style="@style/Commercial_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/commercial_text_spacing"
            android:text="@string/PIZZA_OR_POP_CORN" />

        <TextView
            android:id="@+id/commercial_text2"
            style="@style/Carousel_Prompt_Text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/commercial_text_spacing"
            android:maxWidth="@dimen/commercial_text1_maxwidth"
            android:text="@string/WE_RECOMMEND" />

        <TextView
            android:id="@+id/commercial_text3"
            style="@style/Carousel_Prompt_Text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MAKE_POP_CORN" />
    </LinearLayout>

</sdk.dive.tv.ui.views.CommercialView>